# beaker

./: AGENT.md  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  test_users.csv
.claude/commands/: commit.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/beaker-macros/: Cargo.toml
backend/beaker-macros/src/: lib.rs
backend/migrations/: 010_create_ai_polling.sql  011_create_integrations.sql  012_add_datasource_to_groups.sql  013_add_google_oauth.sql  014_deduplicate_sdk_tokens.sql  015_create_telemetry_definitions.sql  016_create_telemetry_events.sql  017_telemetry_description_to_events.sql  018_create_user_flows.sql  019_deduplicate_ai_polling_insights.sql
backend/src/: config.rs  main.rs
backend/src/api/: accounts.rs  ai.rs  analytics.rs  auth.rs  events.rs  experiments.rs  feature_flags.rs  feature_gates.rs  integrations.rs  invites.rs  mcp.rs  mod.rs  oauth.rs  sdk.rs  telemetry.rs  track.rs  user_groups.rs
backend/src/db/: clickhouse.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  sdk-demo.html  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  sdk-demo.css  sdk-demo.ts
litellm/: config.yaml
scripts/: Dockerfile  README.md  generate_test_users_csv.py  migrate_clickhouse_to_postgres.py  pyproject.toml  seed_test_postgres.py  test_postgres_init.sql
scripts/src/beaker_scripts/: client.py  generate_cuped_data.py  generate_live_data.py  generate_test_users_csv.py  migrate_clickhouse_to_postgres.py
sdk/python/: pyproject.toml
sdk/python/beaker/: __init__.py  feature_flags.py  telemetry.py  tracker.py
sdk/python/expothesis/: __init__.py  feature_flags.py  tracker.py
sdk/typescript/: package.json
(+146 files in other folders)
