[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-sdk"
version = "1.0.0"
description = "Beaker Python SDK for Tracking and Feature Flags"
authors = [
    { name = "Beaker", email = "hello@beaker.io" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://beaker.io"

[tool.hatch.build.targets.wheel]
packages = ["beaker"]
